@@ -1,3 +1,7 @@
+* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.2
 - Expanded simp/rsyslog dependendency range to < 9.0.0.
 
